<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffff0"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/aNumberLabel"
        android:textColor="#FF00FF"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="568dp"
        android:text="@string/bNumberLabel"
        android:textColor="#FF00FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <EditText
        android:id="@+id/aNumberRe"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/inputTextHintRe"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/aNumberIm"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="Im"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/aNumberRe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toEndOf="@+id/aNumberRe"
        app:layout_constraintTop_toTopOf="@+id/aNumberRe" />

    <EditText
        android:id="@+id/bNumberRe"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/inputTextHintRe"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/bNumberIm"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="Im"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/bNumberRe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/aNumberIm"
        app:layout_constraintTop_toTopOf="@+id/bNumberRe"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="84dp"
        android:background="#dc143c"
        android:text="@string/buttonAddLabel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bNumberRe"
        app:layout_constraintVertical_bias="0.948" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:background="#dc143c"
        android:text="@string/buttonSubtractLabel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:scrollbarSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bNumberIm"
        app:layout_constraintVertical_bias="0.496" />

</androidx.constraintlayout.widget.ConstraintLayout>